--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
-    "expo": "^50.0.11",
-    "expo-image-picker": "~14.3.2",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
+    "expo-status-bar": "~1.11.1",
     "firebase": "9.6.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-modal-datetime-picker": "^13.0.1",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "~0.64.12",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
